WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70282
Filtering of URLs when serializing back forward list saves bad current index value
https://bugs.webkit.org/show_bug.cgi?id=70282
Summary
Filtering of URLs when serializing back forward list saves bad current index ...
Jon Lee
Reported
2011-10-17 16:19:23 PDT
<
rdar://problem/10057763
>
Attachments
Patch
(3.08 KB, patch)
2011-10-17 17:29 PDT
,
Jon Lee
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2011-10-17 17:29:49 PDT
Created
attachment 111357
[details]
Patch
Sam Weinig
Comment 2
2011-10-17 17:37:50 PDT
Comment on
attachment 111357
[details]
Patch Can you think of a way to test this in TestWebKitAPI?
Jon Lee
Comment 3
2011-10-17 17:41:05 PDT
Committed
r97681
: <
http://trac.webkit.org/changeset/97681
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug